More consistent checkbox field styling

--- a/css/shortcode-button.css
+++ b/css/shortcode-button.css
@@ -37,8 +37,9 @@
 .ui-dialog .cmb-type-checkbox .cmb-td {
 	padding: 1.2em 0 0 0;
 }
-.ui-dialog .cmb-type-checkbox .cmb-th {
-	width: 300px;
+.ui-dialog .cmb-type-checkbox .cmb2-metabox-description {
+	color: inherit;
+	font-style: inherit;
 }
 .ui-dialog .cmb-th + .cmb-td {
 	float: none;
