changelong for #19 and #18

--- a/css/shortcode-button.css
+++ b/css/shortcode-button.css
@@ -1,11 +1,8 @@
-#scb-wrap.scbshow {
-	display: block;
-}
-.scbshow {
-	display: block;
-}
 .scb-form-wrap, .scb-wrap {
 	display: none;
+}
+#scb-wrap.scbshow, .scb-form-wrap.scbshow, .scb-wrap.scbshow, .scbshow {
+	display: block;
 }
 #scb-modal {
 	position: absolute;
